# gas-fleet-app

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.playwright-mcp/: page-2026-05-07T18-02-38-795Z.yml  page-2026-05-07T18-11-29-657Z.yml  page-2026-05-07T18-12-03-030Z.yml  page-2026-05-07T18-20-29-721Z.yml  page-2026-05-07T18-21-13-448Z.yml  page-2026-05-07T18-27-17-444Z.yml  page-2026-05-07T18-28-29-758Z.yml  page-2026-05-07T18-29-27-667Z.yml  page-2026-05-07T18-30-03-558Z.yml  page-2026-05-07T18-30-36-944Z.yml  page-2026-05-07T18-31-27-964Z.yml  page-2026-05-07T18-31-45-844Z.yml  page-2026-05-07T19-19-18-491Z.yml  page-2026-05-07T19-19-38-639Z.yml  page-2026-05-07T19-20-24-191Z.yml  page-2026-05-07T19-21-39-040Z.yml  page-2026-05-07T19-26-31-181Z.yml  page-2026-05-07T19-31-20-406Z.yml  page-2026-05-07T19-33-15-342Z.yml  page-2026-05-07T19-36-47-298Z.yml  page-2026-05-07T19-36-57-458Z.yml  page-2026-05-07T20-28-42-155Z.yml  page-2026-05-07T20-30-10-399Z.yml  page-2026-05-07T20-34-33-267Z.yml  page-2026-05-07T20-34-54-404Z.yml  page-2026-05-07T20-35-07-661Z.yml  page-2026-05-07T20-35-39-102Z.yml  page-2026-05-07T20-41-16-390Z.yml  (+16 more)
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  day.py
backend/app/schemas/: __init__.py  cvrp.py
backend/app/solver/: __init__.py  classical.py  distance.py  qaoa_adapter.py  qubo.py  types.py
backend/tests/: conftest.py  test_api.py  test_classical.py  test_qaoa_enhancements.py  test_qubo.py
(+18 files in other folders)
