[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-fleet-backend"
version = "0.1.0"
description = "CVRP solver service for the gasoline fleet routing app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.5",
  "sqlalchemy>=2.0",
  "numpy>=1.26",
  "networkx>=3.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
qaoa = [
  "qaoa-repo",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
